# apetest

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  ape.py  mypy.ini  pylintrc  pyproject.toml  tasks.py
ape/: ape.py  checker.py  cmdline.py  control.py  controlcenter.py  fetch.py  plugin.py  referrer.py  report.py  request.py  robots.py  softfab.py  spider.py  validator.py  version.py  vnuclient.py  xmlgen.py
ape/plugin/: __init__.py  checkhtml.py  controlcenter.py  softfab.py
apetest/: cmdline.py  robots.py  version.py
apetest/plugin/: __init__.py  checkhtml.py  softfab.py
src/apetest/: __init__.py  _stylesheet.py  checker.py  cmdline.py  control.py  decode.py  fetch.py  referrer.py  report.py  request.py  robots.py  spider.py  typing.py  version.py  vnuclient.py  xmlgen.py
src/apetest/plugin/: __init__.py  checkhtml.py  controlcenter.py  softfab.py
src/pylint_json2sfresults/: __init__.py
tests/: test_decode.py  test_robots.py  utils.py
