[tool.black]
line-length = 88
target-version = ['py36']

[tool.isort]
profile = "black"
line_length = 88
case_sensitive = true
combine_as_imports = true
from_first = true

[tool.poetry]
name = 'apetest'
version = "0.2.0"
description = 'Smarter-than-monkey testing for web apps'
authors = [
    'Maarten ter Huurne <maarten@boxingbeetle.com>'
    ]
license = 'BSD-3-Clause'
readme = 'README.md'
homepage = 'https://boxingbeetle.com/tools/ape/'
repository = 'https://github.com/boxingbeetle/apetest'
documentation = 'https://apedocs.boxingbeetle.com/'
keywords = ['webapp', 'website', 'test', 'check', 'html']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Software Development :: Testing'
    ]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/boxingbeetle/apetest/issues"

[tool.poetry.dependencies]
python = '^3.9.0'
lxml = '^4.0'
# Technically we can run without "html5validator", but checking HTML is
# a core feature.
html5validator = '>=0.4.2'

[tool.poetry.dev-dependencies]
pytest = '^6.2.4'
pylint = '^2.0'
invoke = "^1.2"
isort = "^5.9.3"
pylint-json2html = "^0.1.0"
markdown = "^3.1"
mypy = '>=0.920'
pyflakes = "^2.1"
lxml-stubs = '>=0.1.1'
pydoctor = ">=20.7.0"
pre-commit = "^3.8.0"
black = "^21.7b0"

[tool.poetry.scripts]
apetest = 'apetest.cmdline:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
