[tool.poetry]
name = 'apetest'
version = "0.2.1"
description = 'Smarter-than-monkey testing for web apps'
authors = [
    'Maarten ter Huurne <maarten@boxingbeetle.com>'
    ]
license = 'BSD-3-Clause'
readme = 'README.md'
homepage = 'https://boxingbeetle.com/tools/ape/'
repository = 'https://github.com/boxingbeetle/apetest'
documentation = 'https://apedocs.boxingbeetle.com/'
keywords = ['webapp', 'website', 'test', 'check', 'html']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Software Development :: Testing'
    ]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/boxingbeetle/apetest/issues"

[tool.poetry.dependencies]
python = '^3.9.0'
lxml = '^4.0'
# Technically we can run without "html5validator", but checking HTML is
# a core feature.
html5validator = '>=0.4.2'

[tool.poetry.dev-dependencies]
pytest = '^8.3.3'
pylint = '^3.3.1'
invoke = "^2.2.0"
pylint-json2html = "^0.1.0"
markdown = "^3.1"
mypy = '^1.11.2'
lxml-stubs = '>=0.1.1'
pydoctor = ">=20.7.0"
pre-commit = "^3.8.0"
ruff = "0.6.8"

[tool.poetry.scripts]
apetest = 'apetest.cmdline:main'

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
